# cat_de_roman_esti

./: .dockerignore  .env.anon.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TASK_BRIEF.md  TASK_RESULT.md  constraints.txt  docker-compose.anon.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  run.sh
.claude/workflows/: critique-games.js
.github/workflows/: ci.yml
cat_de_roman_esti/: __init__.py  cli.py  data.py  engine.py  graph.py  roedu_client.py
cat_de_roman_esti/accounts/: __init__.py  apps.py  models.py  progress.py  urls.py  views.py
cat_de_roman_esti/fixtures/: board_rankings_v37.json  derived_catalog_v38.json  games_pack.json  kg_real.json  kg_sample.json
cat_de_roman_esti/web/: __init__.py  __main__.py  app.py  asgi.py  asgi_limits.py  http.py  legal.py  meta.py  sessions.py  settings.py  spa.py  urls.py  views.py  wsgi.py
cat_de_roman_esti/wordgames/: __init__.py  _progress.py  alchimie.py  categories.py  conexiuni.py  contexto.py  contexto_projection.py  derived_catalog.py  intrusul.py  lant.py  packs.py  perechi.py  service.py  submissions.py
deploy/: Caddyfile  entrypoint.sh
docs/: ARCHITECTURE.md  COMPARISON.md  CRITIQUE_RUBRIC.md  DEPLOY.md  KG_CONTRACT.md  MOBILE_CONTRACT.md  PILOT_BOARD_RANKING.md  ROEDU_INTEGRATION.md  STATUS.md  V38_DERIVED_GAMES.md  agent-map.md  agent-testing.md
docs/adr/: 0001-pivot-to-word-game-arcade.md  0002-kg-contract-v1.md  0003-mobile-contract-stable-operationids.md  0004-branch-merge-policy.md  0005-contexto-category-clue.md  0007-conexiuni-redacted-clue.md  0008-mobile-app-pack-contract-fixture.md  0009-contexto-hidden-answer-rank-view-model.md  0010-conexiuni-hidden-answer-public-view.md  0011-curated-games-pack.md  0012-alias-layer-and-play-density.md  0013-alchimie-category-scoped-combines.md  0014-conexiuni-earned-group-reveal.md  0015-alchimie-exact-action-par.md  0016-lant-branch-quality-floor.md  0017-romanian-first-daily-replay.md  0018-contexto-guess-to-target-distance.md  0019-broad-audience-romanian-curation.md  0020-bound-launch-runtime-and-first-load.md  0021-graded-similarity-and-fuzzy-suggestions.md  0022-confident-auto-accept-and-lant-guidance.md  0023-content-critique-gate.md  0024-distinctive-association-and-demote-path.md  0025-critique-artifact-and-pack-id-lifecycle.md  0026-lant-alchimie-critique-criteria.md  0027-lant-recovery-feedback.md  0028-conexiuni-one-away-recovery.md  0029-contexto-recovery-feedback.md  0030-critique-informed-childhood-content.md  0031-mobile-first-beginner-guidance.md  0032-beginner-common-word-game-datasets.md  0033-bounded-semantic-edge-and-alias-enrichment.md  0034-bounded-alchimie-discovery-lineage.md  0035-bounded-alchimie-empty-reaction-recovery.md  0036-first-class-basic-word-concepts.md  0037-extended-basic-word-concepts.md  0038-inbound-beginner-word-meshes.md  0039-hygiene-anatomy-cleaning-word-meshes.md  0040-face-workshop-garden-word-meshes.md  0041-bathroom-electrical-forest-word-meshes.md  (+11 more)
docs/compliance/: README.md  consent-and-age-gate-spec.md  cookie-notice.md  data-retention-and-dsar.md  dpia-lite.md  privacy-notice.md  ropa.md  terms-of-service.md
docs/handoffs/: 2026-07-07-linux-continuation.md  2026-07-09-v12-actions.json  2026-07-09-v12-continuation.md
frontend/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: check-bundle-budget.mjs
frontend/src/: App.tsx  asyncControl.d.mts  asyncControl.mjs  categories.ts  games.ts  leaderboard.ts  main.tsx  scoreSync.ts  scores.ts  share.ts  sound.ts  theme.ts
frontend/tests/: alchimie-empty-recovery.test.mjs  alchimie-lineage.test.mjs  alchimie-projection.test.mjs  async-control.test.mjs  bundle-budget.test.mjs  (+12 more)
scripts/: api_golden.py  api_golden_diff.py  apply_basic_words_v28.py  apply_basic_words_v29.py  apply_basic_words_v30.py  apply_basic_words_v31.py  apply_basic_words_v32.py  apply_basic_words_v33.py  apply_common_words_v24.py  apply_demotions.py  apply_rereview.py  apply_semantic_edge_alias_v25.py  basic_words_v28_data.py  basic_words_v29_data.py  basic_words_v30_data.py  basic_words_v31_data.py  basic_words_v32_data.py  basic_words_v33_data.py  build_derived_catalog_v38.py  common_words_v24_data.py  critique_pack.py  dense_data.json  densify_content.py  e2e_smoke.py  expand_content.py  expansion_data.json  export_mobile_app_pack.py  export_openapi.py  gen_real_fixture.py  import_candidates.py  import_enrichment.py  merge_duplicates.py  propose_common_words_v24_games.py  rank_games_pack.py  refine_dataset.py  review_submissions.py  semantic_edge_alias_v25_data.py  validate_fixture.py  validate_games_pack.py
tests/: conftest.py  test_accounts_offmode.py  test_alchimie_scoping.py  test_alchimie_sparse_recipes.py  test_aliases.py  test_app_pack_contract.py  test_asgi_request_limit.py  test_board_rankings_v37.py  test_cli.py  test_critique_pack.py  test_data_client.py  test_engine.py  test_fixture_invariants.py  test_games_pack_invariants.py  test_graph.py  test_legal.py  test_mobile_contract.py  test_static_asset_cache.py  test_v14_social_content.py  test_v23_critique_content.py  test_v24_common_words.py  test_v25_semantic_edge_alias.py  test_v28_basic_words.py  test_v29_basic_words.py  test_v30_basic_words.py  test_v31_basic_words.py  test_v32_basic_words.py  test_v33_basic_words.py  test_v37_board_rankings.py  test_v38_derived_rankings.py  test_v38_ranked_catalog.py  test_web.py  test_wordgames_alchimie.py  test_wordgames_conexiuni.py  test_wordgames_contexto.py  test_wordgames_curated.py  test_wordgames_intrusul.py  test_wordgames_lant.py  test_wordgames_perechi.py  test_wordgames_session_store.py
v29-review/: REVIEW_SUMMARY.md  SCOPE.md  analyst-alchimie.md  analyst-conexiuni.md  analyst-contexto.md  analyst-lant.md  deterministic.json  topology-candidates.md
v30-review/: SCOPE.md  deterministic.json
v31-review/: SCOPE.md  deterministic.json
v32-review/: SCOPE.md  deterministic.json
(+354 files in other folders)
