[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-de-roman-esti"
version = "0.1.0"
description = "Thin client + playable terminal game for the Romanian semantic-hop knowledge graph (cat_de_roman_esti)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul Dobos", email = "pauldobos6@gmail.com" }]
keywords = ["romania", "knowledge-graph", "game", "roedu"]
# NO hard runtime deps beyond the standard library — the vendored roedu_client
# uses only urllib, and the game engine/graph are pure stdlib.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
cat-de-roman = "cat_de_roman_esti.cli:main"

[tool.setuptools.packages.find]
include = ["cat_de_roman_esti*"]

# Ship the curated offline fixture AND the built SPA inside the wheel so that a clean
# `pip install .` followed by `python -m cat_de_roman_esti.web` works with no source
# tree present. The static bundle is produced by the frontend build (Docker stage 1 /
# `npm run build`) before packaging; the recursive globs cover the hashed assets/.
[tool.setuptools.package-data]
cat_de_roman_esti = ["fixtures/*.json"]
"cat_de_roman_esti.web" = [
    "static/index.html",
    "static/**/*",
    "static/assets/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
