[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-de-roman-esti"
version = "0.1.0"
description = "Thin client + playable terminal game for the Romanian semantic-hop knowledge graph (cat_de_roman_esti)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul Dobos", email = "pauldobos6@gmail.com" }]
keywords = ["romania", "knowledge-graph", "game", "roedu"]
# NO hard runtime deps beyond the standard library — the vendored roedu_client
# uses only urllib, and the game engine/graph are pure stdlib.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-django>=4.8", "ruff>=0.5"]
# Loose floors so local dev floats forward; for REPRODUCIBLE deploys pin the exact
# resolved closure via the committed constraints file:
#   pip install -c constraints.txt ".[web]"   (the Dockerfile does exactly this)
# Django 5.2 + DRF for fleet operational uniformity; pydantic stays for the request
# models + FastAPI-parity validation errors (see web/http.py).
#
# allauth + dj-database-url + psycopg are the ACCOUNTS extras: only exercised when
# CAT_ACCOUNTS_ENABLED=1 (Sign-in-with-Google + saved progress). They import cleanly
# but are inert in the default stateless deployment, so they ride in [web] to keep the
# single install closure the Dockerfile already uses.
web = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.16",
    "drf-spectacular>=0.28",
    "django-cors-headers>=4.4",
    "whitenoise>=6.7",
    "pydantic>=2.7",
    "uvicorn>=0.29",
    "django-allauth[socialaccount]>=65,<66",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
]

[project.scripts]
cat-de-roman = "cat_de_roman_esti.cli:main"

[tool.setuptools.packages.find]
include = ["cat_de_roman_esti*"]

# Ship the curated offline fixture AND the built SPA inside the wheel so that a clean
# `pip install .` followed by `python -m cat_de_roman_esti.web` works with no source
# tree present. The static bundle is produced by the frontend build (Docker stage 1 /
# `npm run build`) before packaging; the recursive globs cover the hashed assets/.
[tool.setuptools.package-data]
cat_de_roman_esti = ["fixtures/*.json"]
"cat_de_roman_esti.web" = [
    "static/index.html",
    "static/**/*",
    "static/assets/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Django writes these; they are machine-generated and not hand-maintained.
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# The BFF tests bootstrap Django via this settings module (tests/conftest.py also sets
# it). The default suite runs with CAT_ACCOUNTS_ENABLED unset -> stateless, no DB.
# The accounts suite (tests/accounts/, collect-ignored unless CAT_ACCOUNTS_ENABLED=1)
# opts into pytest-django's DB via the django_db marker.
DJANGO_SETTINGS_MODULE = "cat_de_roman_esti.web.settings"
